[BUGFIX] Correct size of statusreport title on small devices
Resolves: #104881
Releases: main
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/85991
Tested-by: Frank Nägler <frank.naegler@typo3.com>
Tested-by: Benni Mack <benni@typo3.org>
Tested-by: Georg Ringer <georg.ringer@gmail.com>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -2890,6 +2890,11 @@ a.dropdown-toggle{text-decoration:none}
   container-type: inline-size;
 }
 
+@container (max-width: 800px) {
+  .statusreport {
+    grid-template: "statusreport-indicator statusreport-title statusreport-body"/calc(var(--statusreport-icon-size) * 1.5) 200px auto;
+  }
+}
 @container (max-width: 500px) {
   .statusreport {
     grid-template: "statusreport-indicator statusreport-title" "statusreport-indicator statusreport-body"/calc(var(--statusreport-icon-size) * 1.5) auto;
